modules/lib/dependencies/libvpx/cobalt_vpx_shim.h

/**
 * Retrieves the single compressed-frame packet the realtime encoder produced
 * for the most recent cobalt_vpx_encoder_encode call.
 *
 * The wrapper iterates vpx_codec_get_cx_data with a fresh local iterator until
 * it finds the one VPX_CODEC_CX_FRAME_PKT the realtime encoder emits per input
 * frame, then returns a pointer to that packet's compressed bytes through outBuf,
 * its length through outLen, and its VPX_FRAME_IS_KEY state through outIsKey. The
 * returned pointer addresses libvpx-owned memory valid only until the next
 * cobalt_vpx_* call on this encoder, so the caller must copy the bytes out
 * immediately. When the rate controller dropped the frame, no packet is
 * produced: outBuf is left NULL and outLen is set to 0.
 *
 * @param ctx      the encoder handle from cobalt_vpx_encoder_create.
 * @param outBuf   receives the compressed-bytes pointer, or NULL when no packet
 *                 was produced; must not be NULL.
 * @param outLen   receives the compressed length in bytes, or 0 when no packet
 *                 was produced; must not be NULL.
 * @param outIsKey receives 1 when the packet is a key frame, otherwise 0; must
 *                 not be NULL.
 * @return COBALT_VPX_OK on success, COBALT_VPX_BAD_PARAM for a NULL argument.
 */
int32_t cobalt_vpx_encoder_get_packet(void *ctx,
                                      const uint8_t **outBuf,
                                      int32_t *outLen,
                                      int32_t *outIsKey);
/**
 * Destroys an encoder created by cobalt_vpx_encoder_create and frees its handle.
 *
 * Calls vpx_codec_destroy on the wrapped context and frees the heap-allocated
 * handle. Must be called at most once per handle. A NULL handle is ignored and
 * reported as success.
 *
 * @param ctx the encoder handle, or NULL.
 * @return COBALT_VPX_OK on success, otherwise the libvpx vpx_codec_err_t from
 *         vpx_codec_destroy.
 */
int32_t cobalt_vpx_encoder_destroy(void *ctx);
/**
 * Creates a libvpx decoder for one stream, building the decoder configuration
 * C-side from the supplied scalars.
 *
 * The wrapper resolves the VP8 or VP9 decoder interface from codec, fills a
 * vpx_codec_dec_cfg_t with a single thread and the picture dimensions, and
 * initializes the context. The created decoder is returned through outCtx as an
 * opaque handle.
 *
 * @param codec  one of COBALT_VPX_CODEC_VP8 / COBALT_VPX_CODEC_VP9.
 * @param width  the picture width in pixels.
 * @param height the picture height in pixels.
 * @param outCtx receives the created decoder handle on success, or is left
 *               holding NULL on failure; must not be NULL.
 * @return COBALT_VPX_OK on success, COBALT_VPX_BAD_PARAM for a NULL outCtx or an
 *         unknown codec, COBALT_VPX_NOMEM if the handle could not be allocated,
 *         otherwise the libvpx vpx_codec_err_t from vpx_codec_dec_init.
 */
int32_t cobalt_vpx_decoder_create(int32_t codec,
                                  int32_t width,
                                  int32_t height,
                                  void **outCtx);
/**
 * Feeds one compressed access unit to the decoder.
 *
 * Forwards to vpx_codec_decode with the supplied bytes and an unlimited
 * deadline. Decoded pictures, if any became available, are retrieved afterwards
 * with cobalt_vpx_decoder_get_frame.
 *
 * @param ctx  the decoder handle from cobalt_vpx_decoder_create.
 * @param data the compressed access-unit bytes.
 * @param len  the length of data in bytes.
 * @return COBALT_VPX_OK on success, COBALT_VPX_BAD_PARAM for a NULL ctx,
 *         otherwise the libvpx vpx_codec_err_t from vpx_codec_decode.
 */
int32_t cobalt_vpx_decoder_decode(void *ctx, const uint8_t *data, size_t len);
/**
 * Retrieves the next decoded picture from the decoder.
 *
 * The wrapper iterates vpx_codec_get_frame with a fresh local iterator and
 * returns the first displayable picture through outImg as an opaque handle, or
 * NULL when no picture is ready. The returned picture is decoder-owned and valid
 * only until the next cobalt_vpx_decoder_decode call; its planes are read with
 * cobalt_vpx_img_plane / cobalt_vpx_img_stride and its dimensions with
 * cobalt_vpx_img_width / cobalt_vpx_img_height.
 *
 * @param ctx    the decoder handle from cobalt_vpx_decoder_create.
 * @param outImg receives the decoded picture handle, or NULL when none is ready;
 *               must not be NULL.
 * @return COBALT_VPX_OK on success (including when no picture is ready),
 *         COBALT_VPX_BAD_PARAM for a NULL argument.
 */
int32_t cobalt_vpx_decoder_get_frame(void *ctx, void **outImg);
/**
 * Returns a plane data pointer of a decoded picture.
 *
 * Reads vpx_image_t.planes[plane] of the opaque picture handle. The pointer
 * addresses decoder-owned memory valid until the next cobalt_vpx_decoder_decode
 * call; rows may carry stride padding, so reads must honor cobalt_vpx_img_stride.
 *
 * @param img   the picture handle from cobalt_vpx_decoder_get_frame.
 * @param plane one of COBALT_VPX_PLANE_Y / _U / _V.
 * @return the plane base pointer, or NULL for a NULL handle or out-of-range plane.
 */
const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane);
/**
 * Returns the row stride, in bytes, of a decoded picture plane.
 *
 * Reads vpx_image_t.stride[plane] of the opaque picture handle. libvpx stores
 * the stride as a plain int, so no widening is needed.
 *
 * @param img   the picture handle from cobalt_vpx_decoder_get_frame.
 * @param plane one of COBALT_VPX_PLANE_Y / _U / _V.
 * @return the plane stride in bytes, or 0 for a NULL handle or out-of-range plane.
 */
int32_t cobalt_vpx_img_stride(void *img, int32_t plane);