modules/lib/src/main/java/com/github/auties00/cobalt/calls2/media/video/vpx/bindings/CobaltVpx.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_get_packet(void *ctx, const uint8_t **outBuf, int32_t *outLen, int32_t *outIsKey)
     * }
     */
    public static MethodHandle cobalt_vpx_encoder_get_packet$handle() {
        return cobalt_vpx_encoder_get_packet.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_get_packet(void *ctx, const uint8_t **outBuf, int32_t *outLen, int32_t *outIsKey)
     * }
     */
    public static MemorySegment cobalt_vpx_encoder_get_packet$address() {
        return cobalt_vpx_encoder_get_packet.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_get_packet(void *ctx, const uint8_t **outBuf, int32_t *outLen, int32_t *outIsKey)
     * }
     */
    public static int cobalt_vpx_encoder_get_packet(MemorySegment ctx, MemorySegment outBuf, MemorySegment outLen, MemorySegment outIsKey) {
        var mh$ = cobalt_vpx_encoder_get_packet.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_encoder_get_packet", ctx, outBuf, outLen, outIsKey);
            }
            return (int)mh$.invokeExact(ctx, outBuf, outLen, outIsKey);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_encoder_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_encoder_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_destroy(void *ctx)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_encoder_destroy$descriptor() {
        return cobalt_vpx_encoder_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_destroy(void *ctx)
     * }
     */
    public static MethodHandle cobalt_vpx_encoder_destroy$handle() {
        return cobalt_vpx_encoder_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_destroy(void *ctx)
     * }
     */
    public static MemorySegment cobalt_vpx_encoder_destroy$address() {
        return cobalt_vpx_encoder_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_destroy(void *ctx)
     * }
     */
    public static int cobalt_vpx_encoder_destroy(MemorySegment ctx) {
        var mh$ = cobalt_vpx_encoder_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_encoder_destroy", ctx);
            }
            return (int)mh$.invokeExact(ctx);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_decoder_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_decoder_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_create(int32_t codec, int32_t width, int32_t height, void **outCtx)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_decoder_create$descriptor() {
        return cobalt_vpx_decoder_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_create(int32_t codec, int32_t width, int32_t height, void **outCtx)
     * }
     */
    public static MethodHandle cobalt_vpx_decoder_create$handle() {
        return cobalt_vpx_decoder_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_create(int32_t codec, int32_t width, int32_t height, void **outCtx)
     * }
     */
    public static MemorySegment cobalt_vpx_decoder_create$address() {
        return cobalt_vpx_decoder_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_create(int32_t codec, int32_t width, int32_t height, void **outCtx)
     * }
     */
    public static int cobalt_vpx_decoder_create(int codec, int width, int height, MemorySegment outCtx) {
        var mh$ = cobalt_vpx_decoder_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_decoder_create", codec, width, height, outCtx);
            }
            return (int)mh$.invokeExact(codec, width, height, outCtx);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_decoder_decode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_decoder_decode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_decode(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_decoder_decode$descriptor() {
        return cobalt_vpx_decoder_decode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_decode(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static MethodHandle cobalt_vpx_decoder_decode$handle() {
        return cobalt_vpx_decoder_decode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_decode(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static MemorySegment cobalt_vpx_decoder_decode$address() {
        return cobalt_vpx_decoder_decode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_decode(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static int cobalt_vpx_decoder_decode(MemorySegment ctx, MemorySegment data, long len) {
        var mh$ = cobalt_vpx_decoder_decode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_decoder_decode", ctx, data, len);
            }
            return (int)mh$.invokeExact(ctx, data, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_decoder_get_frame {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_decoder_get_frame");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_get_frame(void *ctx, void **outImg)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_decoder_get_frame$descriptor() {
        return cobalt_vpx_decoder_get_frame.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_get_frame(void *ctx, void **outImg)
     * }
     */
    public static MethodHandle cobalt_vpx_decoder_get_frame$handle() {
        return cobalt_vpx_decoder_get_frame.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_get_frame(void *ctx, void **outImg)
     * }
     */
    public static MemorySegment cobalt_vpx_decoder_get_frame$address() {
        return cobalt_vpx_decoder_get_frame.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_get_frame(void *ctx, void **outImg)
     * }
     */
    public static int cobalt_vpx_decoder_get_frame(MemorySegment ctx, MemorySegment outImg) {
        var mh$ = cobalt_vpx_decoder_get_frame.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_decoder_get_frame", ctx, outImg);
            }
            return (int)mh$.invokeExact(ctx, outImg);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_img_plane {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_POINTER,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_img_plane");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_img_plane$descriptor() {
        return cobalt_vpx_img_plane.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane)
     * }
     */
    public static MethodHandle cobalt_vpx_img_plane$handle() {
        return cobalt_vpx_img_plane.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_vpx_img_plane$address() {
        return cobalt_vpx_img_plane.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_vpx_img_plane(MemorySegment img, int plane) {
        var mh$ = cobalt_vpx_img_plane.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_img_plane", img, plane);
            }
            return (MemorySegment)mh$.invokeExact(img, plane);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_img_stride {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_img_stride");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_stride(void *img, int32_t plane)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_img_stride$descriptor() {
        return cobalt_vpx_img_stride.DESC;
    }
